[gd_scene load_steps=25 format=3 uid="uid://ih0e15lx231g"]

[ext_resource type="Script" path="res://scripts/game_scene.gd" id="1_6olul"]
[ext_resource type="Texture2D" uid="uid://jemud4nm0tgo" path="res://assets/game_background.png" id="2_c2slq"]
[ext_resource type="FontFile" uid="uid://cc8qug66mfmt3" path="res://fonts/M_PLUS_Rounded_1c/MPLUSRounded1c-ExtraBold.ttf" id="3_b03t2"]
[ext_resource type="Texture2D" uid="uid://dlj2wmhl33cfb" path="res://assets/level_star.png" id="3_u4ao2"]
[ext_resource type="Texture2D" uid="uid://chxhicnyyc2uw" path="res://assets/small_logo.png" id="4_cdjxr"]
[ext_resource type="Texture2D" uid="uid://d4t55eg5glff" path="res://assets/pause_icon.png" id="4_yawcp"]
[ext_resource type="FontFile" uid="uid://j2t83jn4ed75" path="res://fonts/ds_digital/DS-DIGIB.TTF" id="6_cb0c7"]
[ext_resource type="Texture2D" uid="uid://dgy775bqjn1bk" path="res://assets/pause_icon_pressed.png" id="8_l1lpj"]
[ext_resource type="FontFile" uid="uid://b7sikv4hdpa3g" path="res://fonts/M_PLUS_Rounded_1c/MPLUSRounded1c-Bold.ttf" id="9_5ts4d"]
[ext_resource type="Texture2D" uid="uid://do43k8kmgdp5r" path="res://assets/red_glow.png" id="9_agaha"]
[ext_resource type="Texture2D" uid="uid://dt8hfhwd1wski" path="res://assets/name_board.png" id="9_wj2rh"]
[ext_resource type="PackedScene" uid="uid://y50aogg0publ" path="res://scenes/components_prefabs/card_button.tscn" id="10_3c8cw"]
[ext_resource type="FontFile" uid="uid://bncexugjh0hgc" path="res://fonts/River Adventurer/River Adventurer.ttf" id="10_gl6cx"]
[ext_resource type="Texture2D" uid="uid://uph56qgennoq" path="res://assets/enter_button.png" id="12_gjett"]
[ext_resource type="Texture2D" uid="uid://dqat18de4l1fx" path="res://assets/enter_button_pressed.png" id="13_blyhv"]
[ext_resource type="Texture2D" uid="uid://dmntjc8n7drvk" path="res://assets/red_gradient.png" id="14_2wid0"]
[ext_resource type="Texture2D" uid="uid://d0cugosjpesnv" path="res://assets/back_icon.png" id="14_bo26o"]
[ext_resource type="Texture2D" uid="uid://dg78oapux5aof" path="res://assets/back_icon_pressed.png" id="15_r854g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qmgf6"]
bg_color = Color(0, 0, 0, 0.584314)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pt737"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_57s1y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qa7j7"]

[sub_resource type="Theme" id="Theme_1ydvj"]
LineEdit/colors/font_outline_color = Color(0.190762, 0.190762, 0.190762, 1)
LineEdit/colors/font_placeholder_color = Color(1, 1, 1, 0.6)
LineEdit/constants/outline_size = 6
LineEdit/font_sizes/font_size = 22
LineEdit/fonts/font = ExtResource("9_5ts4d")
LineEdit/styles/focus = SubResource("StyleBoxEmpty_pt737")
LineEdit/styles/normal = SubResource("StyleBoxEmpty_57s1y")
LineEdit/styles/read_only = SubResource("StyleBoxEmpty_qa7j7")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ll75e"]
bg_color = Color(0, 0, 0, 0.662745)

[node name="GameScene" type="Control"]
texture_filter = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6olul")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_c2slq")
expand_mode = 2

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/ColorRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 76.0
grow_horizontal = 2
theme_override_constants/margin_left = 33
theme_override_constants/margin_right = 33

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/ColorRect/MarginContainer"]
texture_filter = 2
layout_mode = 2
theme_override_constants/separation = 25

[node name="PauseButton" type="TextureButton" parent="TextureRect/ColorRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(65, 65)
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("4_yawcp")
texture_pressed = ExtResource("8_l1lpj")
texture_hover = ExtResource("8_l1lpj")
ignore_texture_size = true
stretch_mode = 5

[node name="TimeNode" type="Control" parent="TextureRect/ColorRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(86, 39)
layout_mode = 2
size_flags_horizontal = 2

[node name="Time" type="Label" parent="TextureRect/ColorRect/MarginContainer/HBoxContainer/TimeNode"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -19.5
offset_right = 43.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_cb0c7")
theme_override_font_sizes/font_size = 38
text = "00:00"
vertical_alignment = 1

[node name="Logo" type="TextureRect" parent="TextureRect/ColorRect/MarginContainer/HBoxContainer"]
texture_filter = 2
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("4_cdjxr")
expand_mode = 3
stretch_mode = 5

[node name="NameNode" type="Control" parent="TextureRect/ColorRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(86, 39)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="NameLabel" type="Label" parent="TextureRect/ColorRect/MarginContainer/HBoxContainer/NameNode"]
layout_mode = 2
offset_left = 20.0
offset_top = -0.5
offset_right = 100.0
offset_bottom = 39.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0.270588, 0.0352941, 0, 1)
theme_override_colors/font_outline_color = Color(0.270588, 0.0352941, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_b03t2")
theme_override_font_sizes/font_size = 28
text = "NAME"
vertical_alignment = 1

[node name="LevelStar" type="TextureRect" parent="TextureRect/ColorRect/MarginContainer/HBoxContainer"]
texture_filter = 2
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("3_u4ao2")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="TextureRect/ColorRect/MarginContainer/HBoxContainer/LevelStar"]
texture_filter = 2
custom_minimum_size = Vector2(55, 55)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.5
offset_top = -30.2857
offset_right = 27.5
offset_bottom = 34.7143
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.270588, 0.0352941, 0, 1)
theme_override_colors/font_outline_color = Color(0.270588, 0.0352941, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_b03t2")
theme_override_font_sizes/font_size = 28
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Glow" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("9_agaha")
expand_mode = 1

[node name="Base" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1220, 595)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -642.0
offset_right = -30.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 0.160784)

[node name="MarginContainer" type="MarginContainer" parent="Base"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -609.5
offset_top = -237.5
offset_right = 609.5
offset_bottom = 237.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="Base/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 11
theme_override_constants/v_separation = 10
columns = 10

[node name="CardButton" parent="Base/MarginContainer/GridContainer" instance=ExtResource("10_3c8cw")]
visible = false
layout_mode = 2

[node name="NamePanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qmgf6")

[node name="TextureRect" type="TextureRect" parent="NamePanel"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.5
offset_top = -152.5
offset_right = 197.5
offset_bottom = 147.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_wj2rh")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="NamePanel/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -77.0
offset_right = 94.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 122
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 100

[node name="Label" type="Label" parent="NamePanel/TextureRect/MarginContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("10_gl6cx")
theme_override_font_sizes/font_size = 41
text = "NOME:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="NamePanel/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.5
offset_top = -211.5
offset_right = 216.5
offset_bottom = 211.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 105
theme_override_constants/margin_top = 190
theme_override_constants/margin_right = 135
theme_override_constants/margin_bottom = 102

[node name="LineEdit" type="LineEdit" parent="NamePanel/TextureRect/MarginContainer2"]
process_mode = 3
texture_filter = 2
custom_minimum_size = Vector2(220, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_1ydvj")
flat = true

[node name="MarginContainer3" type="MarginContainer" parent="NamePanel/TextureRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 66
theme_override_constants/margin_bottom = 91

[node name="EnterButton" type="TextureButton" parent="NamePanel/TextureRect/MarginContainer3"]
process_mode = 3
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture_normal = ExtResource("12_gjett")
texture_pressed = ExtResource("13_blyhv")
texture_hover = ExtResource("13_blyhv")
ignore_texture_size = true
stretch_mode = 0

[node name="BackNameButton" type="TextureButton" parent="NamePanel"]
custom_minimum_size = Vector2(65, 65)
layout_mode = 1
offset_left = 33.0
offset_top = 6.0
offset_right = 98.0
offset_bottom = 71.0
texture_normal = ExtResource("14_bo26o")
texture_pressed = ExtResource("15_r854g")
texture_hover = ExtResource("15_r854g")
ignore_texture_size = true
stretch_mode = 5

[node name="ErrorPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ll75e")

[node name="TextureRect" type="TextureRect" parent="ErrorPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_2wid0")

[node name="AudioStreamHit" type="AudioStreamPlayer" parent="."]
volume_db = 18.0
bus = &"Hit"

[node name="AudioStreamError" type="AudioStreamPlayer" parent="."]
volume_db = 18.0
bus = &"Error"

[node name="AudioStreamError2" type="AudioStreamPlayer" parent="."]
volume_db = 18.0
bus = &"Error_2"

[connection signal="pressed" from="TextureRect/ColorRect/MarginContainer/HBoxContainer/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="NamePanel/TextureRect/MarginContainer3/EnterButton" to="." method="_on_enter_button_pressed"]
[connection signal="pressed" from="NamePanel/BackNameButton" to="." method="_on_back_name_button_pressed"]
